# Unvanquished

./: CMakeLists.txt  Visual_Studio32.bat  tremulous_i18n+unicode.diff
cmake/: FindICONV.cmake
src/engine/botlib/: aasfile.h  be_aas.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_char.h  be_ai_chat.c  be_ai_chat.h  be_ai_gen.c  be_ai_gen.h  be_ai_goal.c  be_ai_goal.h  be_ai_move.c  be_ai_move.h  (+30 more)
src/engine/client/: cg_api.h  cin_ogm.c  cl_avi.c  cl_cgame.c  cl_cin.c  cl_console.c  cl_input.c  cl_irc.c  cl_keys.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_scrn.c  cl_ui.c  client.h  keys.h  libmumblelink.c  libmumblelink.h  snd_adpcm.c  snd_api.h  snd_codec.c  snd_codec.h  snd_codec_ogg.c  snd_codec_wav.c  snd_dma.c  snd_load.c  snd_local.h  snd_mem.c  snd_mix.c  snd_public.h  snd_wavelet.c  ui_api.h
src/engine/database/: database.h  db_main.c  db_mysql.c
src/engine/null/: null_client.c
src/engine/qcommon/: cm_load.c  cm_local.h  cm_patch.c  cm_patch.h  cm_physics.cpp  cm_polylib.c  cm_polylib.h  cm_public.h  cm_test.c  cm_trace.c  cm_trisoup.c  cmd.c  common.c  crypto.h  cvar.c  dl_local.h  dl_main.c  dl_main_curl.c  dl_public.h  files.c  htable.c  htable.h  huffman.c  ioapi.c  ioapi.h  md4.c  md4.h  md5.c  msg.c  net_chan.c  net_ip.c  parse.c  q_math.c  q_platform.h  q_shared.c  q_shared.h  qcommon.h  qfiles.h  surfaceflags.h  unzip.c  (+6 more)
src/engine/renderer/: tr_animation.c  tr_animation_mdm.c  tr_animation_mds.c  tr_backend.c  tr_bsp.c  tr_cmds.c  tr_cmesh.c  tr_curve.c  tr_decals.c  tr_flares.c  tr_font.c  tr_image.c  tr_init.c  tr_light.c  (+18 more)
src/libs/libpng/: CMakeLists.txt
src/libs/zlib/: CMakeLists.txt
(+223 files in other folders)
